deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: spring-boot-todo-app
  labels:
    app: todo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: marijatimova/spring-boot-todo-app:latest
          ports:
            - containerPort: 8080
