service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: spring-boot-todo-app
spec:
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
