service-postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-postgres
spec:
  ports:
    - port: 5432
  selector:
    app: todo-postgres
  clusterIP: None
